force-app/main/default/objects/expenditure__c/expenditure__c.object-meta.xml
<CustomObject>
    <label>expenditure</label>
    <nameField>
        <label>expenditure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>expenditure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>