force-app/main/default/objects/expenditure__c/fields/mode_of_payment__c.field-meta.xml
<CustomField>
    <fullName>mode_of_payment__c</fullName>
    <label>mode of payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cash</fullName>
            </value>
            <value>
                <fullName>check</fullName>
            </value>
            <value>
                <fullName>credit</fullName>
            </value>
            <value>
                <fullName>debit</fullName>
            </value>
            <value>
                <fullName>loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>