force-app/main/default/objects/expenditure__c/fields/priority__c.field-meta.xml
<CustomField>
    <fullName>priority__c</fullName>
    <label>priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>low</fullName>
            </value>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>high</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>