force-app/main/default/objects/expenditure__c/recordTypes/house.recordType-meta.xml
<RecordType>
    <fullName>house</fullName>
    <active>true</active>
    <label>house</label>
</RecordType>