force-app/main/default/objects/expenditure__c/recordTypes/office.recordType-meta.xml
<RecordType>
    <fullName>office</fullName>
    <active>true</active>
    <label>office</label>
</RecordType>